fixed center align on bigger screens

--- a/style.css
+++ b/style.css
@@ -387,7 +387,7 @@ Menu
 
   .drinks-subcategories,
   .food-subcategories {
-    justify-content: flex-start;
+    justify-content: center;
     padding: 0 1rem;
   }
 
